--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,16 +8,20 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #3b82f6; /* Scrollbar color */
+    background-color: #6438c0; /* Scrollbar color */
     border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #2563eb; /* Hover color */
+    background-color: #6438c0; /* Hover color */
 }
 
 /* Firefox */
 * {
     scrollbar-width: thin;
-    scrollbar-color: #3b82f6 #f1f1f1;
+    scrollbar-color: #6438c0 #f1f1f1;
+}
+
+body {
+    font-family: "Inter", sans-serif;
 }
